<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_CncCmd" Id="{bfbed99a-036f-4373-a7be-6feb43a2d296}">
    <Declaration><![CDATA[TYPE ST_CncCmd :
STRUCT
	StartPos: SMC_PosInfo;
	OriConvention: SMC_ORI_CONVENTION := SMC_ORI_CONVENTION.ZYX;
	Filename: STRING := 'CNC_FromFile.cnc';
	CoordinateType: DUT_Command_CoordinateType := DUT_Command_CoordinateType.Variable;
	ArrayIndex: INT := GVL.DEC_START_POS;
	ArrayType: DUT_Command_ArrayType := DUT_Command_ArrayType.StoredPosition;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>